Fix avatar spacing on small screens

--- a/_src/scss/_images.scss
+++ b/_src/scss/_images.scss
@@ -29,7 +29,7 @@ figcaption {
 .avatar {
   display: block;
   width: 10em;
-  margin: 0 auto 1.5em;
+  margin: 0 auto 3em;
   border-radius: 50em;
 
   @include at-least(m) {
